<resources>
    <string name="app_name">RossetINNO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Alexander Smirnov</string>
    <string name="nav_header_subtitle">alfie.work@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_users">Community</string>
    <string name="menu_ideabox">Idea Box</string>
    <string name="menu_challenges">Challenges</string>
    <string name="menu_brainstorm">Brainstorm</string>
    <string name="menu_skills">Skills</string>
    <string name="menu_messages">My messages</string>
    <string name="menu_ideas">My ideas</string>
    <string name="menu_profile">My profile</string>
    <string name="menu_topusers">Top users</string>
    <string name="save">Save</string>
    <string name="new_idea">New short idea</string>
    <string name="title">Title</string>
    <string name="short_description">Short Description</string>
    <string name="nessessery_field">Nessessery Field</string>
    <string name="detail_description">Detail Description</string>
    <string name="not_nessessery_field">Not nessessery field</string>
    <string name="attachment">Attachment</string>
    <string name="add_attachment">Add attachment</string>

    <string name="gif_is_not_supported_toast">gif images are not supported</string>
</resources>